# circuits-io

./: .gitignore  cabal.project  circuits-io.cabal  justfile  readme.md
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.14.1/: circuits-0.1.0.0-inplace.conf  circuits-io-0.1.0.0-inplace.conf  package.cache
examples/: agent-bridge.hs  box-api-audit.md  box-concurrent.md  box-connectors-map.md  box-core.hs  box-proto.hs  box-pure.hs  box-socket.md  cabal-repl-real.hs  cabal-repl.hs  channel-basics.md  channel-ends.md  channel-kw.md  channel-refactor.md  dual-spike.hs  hyper-stream.md  io-producer.md  learners.md  nucleus.md  patterns.md
examples/Queue/: PurePipeline.hs
src/Circuit/: Channel.hs  Comm.hs  Ends.hs  IO.hs  Queue.hs  Repl.hs  Session.hs  Socket.hs  Step.hs  Time.hs
src/Circuit/IO/: Async.hs  File.hs  Queue.hs  Repl.hs  Server.hs  Socket.hs  TCP.hs  Time.hs  Websocket.hs
src/Circuit/IO/Socket/: Types.hs
src/Circuit/IO/TCP/: Example.hs
src/Circuit/IO/Websocket/: Example.hs
src/Circuit/Repl/: Turn.hs
test/: Main.hs  MockBackend.hs
test/mock-repl/: Main.hs
