cabal-version: 3.0
name: circuits-io
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2025
category: control
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/circuits#readme
bug-reports: https://github.com/tonyday567/circuits/issues
synopsis: Channel decomposition and buffered IO for the circuits library
description:
  @circuits-io@ provides channel decomposition and buffered IO for the circuits library.
  Three entry points: circuit feedback ('Circuit.Ends'), queue buffering ('Circuit.Queue'),
  and external process communication ('Circuit.Repl', 'Circuit.Socket').

build-type: Simple
tested-with:
  ghc ==9.14.1

source-repository head
  type: git
  location: https://github.com/tonyday567/circuits

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wno-unused-imports
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

common ghc2024-stanza
  if impl(ghc >=9.10)
    default-language:
      GHC2024
  else
    default-language:
      GHC2021

library
  import: ghc-options-stanza
  import: ghc2024-stanza
  hs-source-dirs: src
  exposed-modules:
    Circuit.Comm
    Circuit.Ends
    Circuit.Queue
    Circuit.Repl
    Circuit.Session
    Circuit.Socket
    Circuit.Step
    Circuit.Time

  build-depends:
    base >=4.18 && <5,
    bytestring >=0.11 && <0.13,
    circuits >=0.1.0.0,
    async >=2.2 && <3,
    stm >=2.5 && <3,
    containers >=0.6 && <0.9,
    network-simple >=0.4 && <0.5,
    profunctors >=5.6 && <5.7,
    text >=2.0 && <3,
    directory >=1.3 && <1.4,
    process >=1.6 && <1.7,
    time >=1.12 && <2,
    websockets >=0.12 && <0.14,

executable mock-repl
  import: ghc-options-stanza
  import: ghc2024-stanza
  hs-source-dirs: test/mock-repl
  main-is: Main.hs
  build-depends:
    base >=4.18 && <5,
    text >=2.0 && <3
  ghc-options:
    -threaded
    -rtsopts

executable cabal-repl-example
  import: ghc-options-stanza
  import: ghc2024-stanza
  hs-source-dirs: examples
  main-is: cabal-repl.hs
  build-depends:
    base >=4.18 && <5,
    circuits-io,
    text >=2.0 && <3
  ghc-options:
    -threaded
    -rtsopts

executable agent-bridge
  import: ghc-options-stanza
  import: ghc2024-stanza
  hs-source-dirs: examples
  main-is: agent-bridge.hs
  build-depends:
    base >=4.18 && <5,
    circuits-io,
    text >=2.0 && <3
  ghc-options:
    -threaded
    -rtsopts

test-suite circuits-io-test
  import: ghc-options-stanza
  import: ghc2024-stanza
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base >=4.18 && <5,
    circuits-io,
    circuits,
    text >=2.0 && <3,
    process >=1.6 && <1.7,
    directory >=1.3 && <1.4,
    async >=2.2 && <3,
    stm >=2.5 && <3,
    tasty >=1.4,
    tasty-hunit >=0.10
  ghc-options:
    -threaded
    -rtsopts
