cabal-version: 3.0
name: circuits-io
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2025
category: control
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/circuits-io
bug-reports: https://github.com/tonyday567/circuits-io/issues
synopsis: Concrete IO transports for the circuits library
description:
  Socket (TCP/WebSocket), step combinators, and time primitives.
  Free REPL dual ends, channels, and sessions live in @circuits-repl@.

build-type: Simple
tested-with:
  ghc ==9.14.1

source-repository head
  type: git
  location: https://github.com/tonyday567/circuits-io

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wno-unused-imports
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

common ghc2024-stanza
  if impl(ghc >=9.10)
    default-language:
      GHC2024
  else
    default-language:
      GHC2021

library
  import: ghc-options-stanza
  import: ghc2024-stanza
  hs-source-dirs: src
  exposed-modules:
    Circuit.Socket
    Circuit.Time
  -- Circuit.Step is present under src/ but needs a Trace-API refresh
  -- (pre-kind-gen constructors). Re-expose when updated.

  build-depends:
    async >=2.2 && <3,
    base >=4.18 && <5,
    bytestring >=0.11 && <0.13,
    circuits >=0.1.0.0 && <0.3,
    network-simple >=0.4 && <0.5,
    stm >=2.5 && <3,
    text >=2.0 && <3,
    time >=1.12 && <2,
    websockets >=0.12 && <0.14
